<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <EditText 
        android:id="@+id/CreateUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameHint" />
    
    <EditText 
        android:id="@+id/createPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_below="@id/CreateUserName" />
    
    <EditText 
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:layout_below="@id/createPassword" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btnCreateUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
        
    </RelativeLayout>
    
</RelativeLayout>