<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/android"
    tools:context=".HomeActivity" >

    <EditText 
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameHint" />
    
    <EditText 
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_below="@id/userName" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        	
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
        	<Button
            	android:id="@+id/btnLoginSubmit"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight=".50"
            	android:text="@string/submit" />
        
        	<Button
            	android:id="@+id/btnLoginNew"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight=".50"
            	android:text="@string/newUser" />
        
        </LinearLayout>
        
    </RelativeLayout>
    
</RelativeLayout>